# token-burger

./: .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
openspec/: config.yaml
openspec/changes/add-agent-behavior-tips/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-core-implementation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-popup-modal-design/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-redesign-settings-window-macos/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-24-add-about-tab/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-12-add-mimocode-agent/: design.md  (+2 more)
openspec/changes/project-init/: design.md  proposal.md  tasks.md
openspec/changes/refactor-agent-source-pipeline/: design.md  proposal.md  tasks.md
openspec/specs/account-usage-monitoring/: spec.md
openspec/specs/agent-adapters/: spec.md
openspec/specs/agent-behavior-tips/: spec.md
openspec/specs/app-updater/: spec.md
openspec/specs/burger-ui/: spec.md
openspec/specs/design-supplement/: spec.md
openspec/specs/dev-standards/: spec.md
openspec/specs/pricing/: spec.md
openspec/specs/project-scaffold/: spec.md
openspec/specs/settings-ui/: spec.md
openspec/specs/sqlite-database/: spec.md
openspec/specs/tauri-bridge/: spec.md
openspec/specs/watcher-engine/: spec.md
scripts/: version-bump.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: app-icon.icns  icon.icns
src-tauri/resources/: default_pricing.json
src-tauri/src/: commands.rs  lib.rs  logger.rs  main.rs  pricing.rs  tray_usage.rs  types.rs
src-tauri/src/account_usage/: credentials.rs  manager.rs  mod.rs  store.rs
src-tauri/src/account_usage/providers/: claude_code.rs  codex.rs  cursor.rs  github_copilot.rs  mod.rs
src-tauri/src/adapters/: claude_code.rs  codex.rs  gemini_cli.rs  mimocode.rs  mod.rs  opencode.rs
src-tauri/src/behavior/: codex.rs  dispatcher.rs  mimocode.rs  mod.rs  opencode.rs  tip_window.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/watcher/: mod.rs  notify_strategy.rs  offset.rs  polling_strategy.rs  sqlite_strategy.rs
src/components/: ErrorBoundary.tsx
src/components/AccountUsageCard/: index.css  index.tsx
src/components/Burger/: BurgerLayer.tsx  index.css  index.tsx  themes.ts
src/components/__test__/: account-usage-card.test.tsx
src/context/: AccountUsageContext.tsx  TokenContext.tsx
src/hooks/: useAccountUsage.ts  useTokenStream.ts
src/hooks/__test__/: use-account-usage.test.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-CN.json
src/pages/BehaviorTip/: index.css  index.tsx
src/pages/Popup/: index.css  index.tsx
src/pages/Settings/: index.css  index.tsx
src/types/: index.ts
src/types/__test__/: index.test.ts
src/utils/: format.ts  platform.ts  pricing.ts
src/utils/__test__/: format.test.ts  pricing.test.ts
(+42 files in other folders)
