[package]
name = "token-burger"
version = "0.1.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
notify-debouncer-full = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"] }
glob = "0.3"
log = { version = "0.4", features = ["std"] }
dirs = "6"
tauri-plugin-updater = "2.10.1"
tauri-plugin-opener = "2.5.3"

[dev-dependencies]
tempfile = "3"
