[package]
name = "token-burger"
version = "0.2.14"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "~2.10.3", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
notify-debouncer-full = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"] }
glob = "0.3"
log = { version = "0.4", features = ["std"] }
dirs = "6"
tauri-plugin-updater = "2.10.1"
tauri-plugin-opener = "2.5.3"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSAttributedString", "NSButton", "NSColor", "NSControl", "NSGraphics", "NSImage", "NSResponder", "NSStatusBarButton", "NSStatusItem", "NSTextAttachment", "NSView", "objc2-core-foundation"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSData", "NSAttributedString", "NSGeometry", "NSObject", "NSRange", "NSString", "objc2-core-foundation"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["linux-native"] }

[dev-dependencies]
tempfile = "3"
